<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2025 Grandstream

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     https://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/color_statusBar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/inventory_adjustments"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/preference_padding_l_r"
        android:layout_marginEnd="@dimen/preference_padding_l_r"
        android:layout_marginTop="@dimen/preference_divider_l_r"
        android:layout_marginBottom="@dimen/length_8">

        <com.gs.app.netsuiteerp.ui.widgets.GsMaterialSpinner
            android:id="@+id/spinner_start_date"
            android:layout_width="0dp"
            android:layout_height="@dimen/length_96"
            android:layout_weight="1"
            android:hint="@string/start_date"
            android:text="" />

        <com.gs.app.netsuiteerp.ui.widgets.GsMaterialSpinner
            android:id="@+id/spinner_end_date"
            android:layout_width="0dp"
            android:layout_height="@dimen/length_96"
            android:layout_marginStart="@dimen/preference_divider_l_r"
            android:layout_weight="1"
            android:hint="@string/end_date"
            android:text="" />
    </LinearLayout>

    <com.gs.app.netsuiteerp.ui.widgets.GsMaterialSpinner
        android:id="@+id/spinner_limit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/length_96"
        android:layout_marginStart="@dimen/preference_padding_l_r"
        android:layout_marginEnd="@dimen/preference_padding_l_r"
        android:hint="@string/limit_count"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty_button_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/preference_divider_l_r"
        android:layout_marginBottom="@dimen/preference_divider_l_r">

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_reset"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/sale_reset"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_medium" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/preference_divider_l_r"
        android:background="@color/color_statusBar"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_statusBar"
        android:clipToOutline="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_inventory_adjustment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>